src/test/ui/generic-associated-types/issue-74684-2.stderr
error[E0271]: type mismatch resolving `<{integer} as Fun>::F<'_> == [u8]`
  --> $DIR/issue-74684-2.rs:23:5
   |
LL | fn bug<'a, T: ?Sized + Fun<F<'a> = [u8]>>(t: Box<T>) -> &'static T::F<'a> {
   |                            ------------ required by this bound in `bug`
...
LL |     bug(Box::new(x));
   |     ^^^ expected slice `[u8]`, found `i32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
